# baby-tracker

./: io.kcmr.baby-tracker.json  meson.build
data/: io.kcmr.baby-tracker.appdata.xml.in  io.kcmr.baby-tracker.desktop.in  io.kcmr.baby-tracker.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: baby-tracker-window.c  baby-tracker-window.h  baby-tracker-window.ui  baby-tracker.gresource.xml  main.c  meson.build
src/ui/: #baby-tracker-window.ui#  baby-tracker-window.ui  baby-tracker-window.ui~
